# docs

./: .envrc  404.html  index.html  mkdocs.yml  pyproject.toml
algo_list/: index.html
docs/: algo_list.md  how_do_i_use.md  index.md
how_do_i_use/: index.html
search/: search_index.json
