[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Jonathan Smith <jonathan.smith@loamin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
